DGC-167: Load the Fonts inside gutenberg editor. (#141)

--- a/web/themes/custom/govcon/components/gutenberg-style.scss
+++ b/web/themes/custom/govcon/components/gutenberg-style.scss
@@ -5,4 +5,4 @@
 @use "@atoms/typography/typography.scss";
 @use "@atoms/icons/icons.utility.scss";
 @use "@atoms/link/link.scss";
-@use "./gutenberg-editor.scss";
+@use "./gutenberg/gutenberg-editor.scss";
