DGC-166: Updated sponsor logo hover effect. (#146)

--- a/web/themes/custom/govcon/components/molecules/sponsor-listing/sponsor-listing.scss
+++ b/web/themes/custom/govcon/components/molecules/sponsor-listing/sponsor-listing.scss
@@ -22,6 +22,14 @@
   @include mixins.media-breakpoint-down(sm) {
     grid-template-columns: 1fr;
   }
+
+  &-logo {
+    img {
+      &:hover {
+        opacity: 0.5;
+      }
+    }
+  }
 }
 
 .sponsor_listing-container-heading {
