DGC-169: Fixed social logo rendering in incognito. (#150)

--- a/web/themes/custom/govcon/components/molecules/footer-social-menu/footer-social-menu.scss
+++ b/web/themes/custom/govcon/components/molecules/footer-social-menu/footer-social-menu.scss
@@ -14,9 +14,9 @@
     font-size: 28px;
     text-decoration: none;
     color: map.get(color.$colors, "light");
-  }
-
-  svg {
-    display: none;
+    
+    &.ext {
+      display: inline-block;
+    }
   }
 }
