DGC-000: Update the style to match the editor spacing with FE. (#153)

--- a/web/themes/custom/govcon/components/gutenberg-style.scss
+++ b/web/themes/custom/govcon/components/gutenberg-style.scss
@@ -6,3 +6,4 @@
 @use "@atoms/icons/icons.utility.scss";
 @use "@atoms/link/link.scss";
 @use "./gutenberg/gutenberg-editor.scss";
+@use "@organisms/announcement-listing/announcement-listing.scss";
