DGC-000: enable aggregation module. (#156)

--- a/web/themes/custom/govcon/templates/layout/html.html.twig
+++ b/web/themes/custom/govcon/templates/layout/html.html.twig
@@ -26,6 +26,8 @@
 <!DOCTYPE html>
 <html{{ html_attributes }}>
   <head>
+    <link rel="preload" href="/themes/custom/govcon/assets/fonts/typography/Poppins-Regular.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="/themes/custom/govcon/assets/fonts/typography/RobotoMono-Regular.woff" as="font" type="font/woff" crossorigin>
     <head-placeholder token="{{ placeholder_token }}">
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token }}">
