DGC-163: Updated header drop-down menu design. (#149)

--- a/web/themes/custom/govcon/components/molecules/menu/menu.scss
+++ b/web/themes/custom/govcon/components/molecules/menu/menu.scss
@@ -29,6 +29,14 @@ nav {
         .chevron-icon {
           display: none;
         }
+
+        &:last-child {
+          ul.dropdown-menu {
+            right: 0;
+            left: auto;
+            transform: translateX(0);
+          }
+        }
       }
 
       &.has-below::after {
