[DNM] DGC-174: preload fonts. (#161)
* DGC-174: preload fonts.

* DGC-174: Enable critical css module.

* DGC-174: Update the CLS score.

* DGC-174: Fix the CLS issue.

* DGC-174: Enable critical css on frontpage.

* DGC-174: Update the critical css.

* DGC-174: Update the critical css.

* DGC-174: Update the critical css.

--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -41,6 +41,10 @@
   > :last-child {
     padding-bottom: 32px;
   }
+
+  p {
+    line-height: 1.6;
+  }
 }
 
 @include mixins.media-breakpoint-down(md) {
